--- a/analitica.ipynb
+++ b/analitica.ipynb
@@ -20,8 +20,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e4a10c7",
+   "metadata": {},
+   "source": [
+    "# Análisis Exploratorio"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "6cf200b2",
    "metadata": {},
    "outputs": [
@@ -57,7 +65,8 @@
       "3        5000  \n",
       "4        7503  \n",
       "\n",
-      "[5 rows x 21 columns]\n"
+      "[5 rows x 21 columns]\n",
+      "Filas: 21613, Columnas: 21\n"
      ]
     }
    ],
@@ -66,7 +75,290 @@
     "\n",
     "url = \"https://raw.githubusercontent.com/rashida048/Datasets/master/home_data.csv\"\n",
     "df = pd.read_csv(url)\n",
-    "print(df.head())"
+    "print(df.head())\n",
+    "print(f\"Filas: {df.shape[0]}, Columnas: {df.shape[1]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab6bca5f",
+   "metadata": {},
+   "source": [
+    "## caracteristicas de las viviendas y tipos de datos\n",
+    "- id: identificador único de la vivienda (entero)\n",
+    "- date: fecha de la venta (cadena/fecha)\n",
+    "- price: precio de la vivienda (float)\n",
+    "- bedrooms: número de habitaciones (entero)\n",
+    "- bathrooms: número de baños (entero/categórico)\n",
+    "- sqft_living: área habitable en pies cuadrados (entero)\n",
+    "- sqft_lot: área total del lote (entero)\n",
+    "- floors: número de pisos (entero/categórico)\n",
+    "- waterfront: si tiene vista al mar (1: sí, 0: no) (entero/categórico)\n",
+    "- view: calidad de la vista (entero/categórico)\n",
+    "- condition: condición de la vivienda (entero/categórico)\n",
+    "- grade: calificación de la construcción (entero/categórico)\n",
+    "- sqft_above: área sobre el suelo (entero)\n",
+    "- sqft_basement: área del sótano (entero)\n",
+    "- yr_built: año de construcción (entero)\n",
+    "- yr_renovated: año de renovación (entero)\n",
+    "- zipcode: código postal (cadena/categórico)\n",
+    "- lat: latitud (float)\n",
+    "- long: longitud (float)\n",
+    "- sqft_living15: área habitable de las 15 casas más cercanas (entero)\n",
+    "- sqft_lot15: área de lote de las 15 casas más cercanas (entero)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6845eb5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id               0\n",
+      "date             0\n",
+      "price            0\n",
+      "bedrooms         0\n",
+      "bathrooms        0\n",
+      "sqft_living      0\n",
+      "sqft_lot         0\n",
+      "floors           0\n",
+      "waterfront       0\n",
+      "view             0\n",
+      "condition        0\n",
+      "grade            0\n",
+      "sqft_above       0\n",
+      "sqft_basement    0\n",
+      "yr_built         0\n",
+      "yr_renovated     0\n",
+      "zipcode          0\n",
+      "lat              0\n",
+      "long             0\n",
+      "sqft_living15    0\n",
+      "sqft_lot15       0\n",
+      "dtype: int64\n",
+      "numero de duplicados: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Revisar valores nulos y duplicados en el DataFrame\n",
+    "print(df.isnull().sum())\n",
+    "print(\"numero de duplicados:\",df.duplicated().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "083305f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              date  year_sold  month_sold  yr_built  yr_renovated  \\\n",
+      "0  20141013T000000       2014          10      1955             0   \n",
+      "1  20141209T000000       2014          12      1951          1991   \n",
+      "2  20150225T000000       2015           2      1933             0   \n",
+      "3  20141209T000000       2014          12      1965             0   \n",
+      "4  20150218T000000       2015           2      1987             0   \n",
+      "\n",
+      "   years_since_renovation  \n",
+      "0                      59  \n",
+      "1                      23  \n",
+      "2                      82  \n",
+      "3                      49  \n",
+      "4                      28  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extraer año y mes de la columna 'date'\n",
+    "df['year_sold'] = df['date'].str[:4].astype(int)\n",
+    "df['month_sold'] = df['date'].str[4:6].astype(int)\n",
+    "\n",
+    "# Calcular años desde la renovación (si no fue renovada, usar año de construcción)\n",
+    "df['last_renovation'] = df[['yr_built', 'yr_renovated']].max(axis=1)\n",
+    "df['years_since_renovation'] = df['year_sold'] - df['last_renovation']\n",
+    "\n",
+    "print(df[['date', 'year_sold', 'month_sold', 'yr_built', 'yr_renovated', 'years_since_renovation']].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "cea3b6cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variables categóricas:\n",
+      "\n",
+      "floors value counts:\n",
+      "floors\n",
+      "1.0    10680\n",
+      "2.0     8241\n",
+      "1.5     1910\n",
+      "3.0      613\n",
+      "2.5      161\n",
+      "3.5        8\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "waterfront value counts:\n",
+      "waterfront\n",
+      "0    21450\n",
+      "1      163\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "view value counts:\n",
+      "view\n",
+      "0    19489\n",
+      "2      963\n",
+      "3      510\n",
+      "1      332\n",
+      "4      319\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "condition value counts:\n",
+      "condition\n",
+      "3    14031\n",
+      "4     5679\n",
+      "5     1701\n",
+      "2      172\n",
+      "1       30\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "grade value counts:\n",
+      "grade\n",
+      "7     8981\n",
+      "8     6068\n",
+      "9     2615\n",
+      "6     2038\n",
+      "10    1134\n",
+      "11     399\n",
+      "5      242\n",
+      "12      90\n",
+      "4       29\n",
+      "13      13\n",
+      "3        3\n",
+      "1        1\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "zipcode value counts:\n",
+      "zipcode\n",
+      "98103    602\n",
+      "98038    590\n",
+      "98115    583\n",
+      "98052    574\n",
+      "98117    553\n",
+      "        ... \n",
+      "98102    105\n",
+      "98010    100\n",
+      "98024     81\n",
+      "98148     57\n",
+      "98039     50\n",
+      "Name: count, Length: 70, dtype: int64\n",
+      "\n",
+      "year_sold value counts:\n",
+      "year_sold\n",
+      "2014    14633\n",
+      "2015     6980\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "month_sold value counts:\n",
+      "month_sold\n",
+      "5     2414\n",
+      "4     2231\n",
+      "7     2211\n",
+      "6     2180\n",
+      "8     1940\n",
+      "10    1878\n",
+      "3     1875\n",
+      "9     1774\n",
+      "12    1471\n",
+      "11    1411\n",
+      "2     1250\n",
+      "1      978\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Variables no categóricas:\n",
+      "              price      bedrooms     bathrooms   sqft_living      sqft_lot  \\\n",
+      "count  2.161300e+04  21613.000000  21613.000000  21613.000000  2.161300e+04   \n",
+      "mean   5.400881e+05      3.370842      2.114757   2079.899736  1.510697e+04   \n",
+      "std    3.671272e+05      0.930062      0.770163    918.440897  4.142051e+04   \n",
+      "min    7.500000e+04      0.000000      0.000000    290.000000  5.200000e+02   \n",
+      "25%    3.219500e+05      3.000000      1.750000   1427.000000  5.040000e+03   \n",
+      "50%    4.500000e+05      3.000000      2.250000   1910.000000  7.618000e+03   \n",
+      "75%    6.450000e+05      4.000000      2.500000   2550.000000  1.068800e+04   \n",
+      "max    7.700000e+06     33.000000      8.000000  13540.000000  1.651359e+06   \n",
+      "\n",
+      "         sqft_above  sqft_basement      yr_built           lat          long  \\\n",
+      "count  21613.000000   21613.000000  21613.000000  21613.000000  21613.000000   \n",
+      "mean    1788.390691     291.509045   1971.005136     47.560053   -122.213896   \n",
+      "std      828.090978     442.575043     29.373411      0.138564      0.140828   \n",
+      "min      290.000000       0.000000   1900.000000     47.155900   -122.519000   \n",
+      "25%     1190.000000       0.000000   1951.000000     47.471000   -122.328000   \n",
+      "50%     1560.000000       0.000000   1975.000000     47.571800   -122.230000   \n",
+      "75%     2210.000000     560.000000   1997.000000     47.678000   -122.125000   \n",
+      "max     9410.000000    4820.000000   2015.000000     47.777600   -121.315000   \n",
+      "\n",
+      "       sqft_living15     sqft_lot15  years_since_renovation  \n",
+      "count   21613.000000   21613.000000            21613.000000  \n",
+      "mean     1986.552492   12768.455652               40.936936  \n",
+      "std       685.391304   27304.179631               28.813643  \n",
+      "min       399.000000     651.000000               -1.000000  \n",
+      "25%      1490.000000    5100.000000               15.000000  \n",
+      "50%      1840.000000    7620.000000               37.000000  \n",
+      "75%      2360.000000   10083.000000               60.000000  \n",
+      "max      6210.000000  871200.000000              115.000000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Separar columnas categóricas y no categóricas según el significado de los datos\n",
+    "categoricas = [\n",
+    "    'floors','waterfront', 'view', 'condition', 'grade', 'zipcode','year_sold','month_sold'\n",
+    " ]\n",
+    "no_categoricas = [\n",
+    "     'price', 'bedrooms', 'bathrooms', 'sqft_living', 'sqft_lot', 'sqft_above', 'sqft_basement',\n",
+    "    'yr_built', 'lat', 'long', 'sqft_living15', 'sqft_lot15' ,'years_since_renovation'\n",
+    " ]\n",
+    "\n",
+    "# DataFrame de variables categóricas\n",
+    "df_categoricas = df[categoricas]\n",
+    "print('Variables categóricas:')\n",
+    "for col in df_categoricas.columns:\n",
+    "    print(f'\\n{col} value counts:')\n",
+    "    print(df_categoricas[col].value_counts())\n",
+    "\n",
+    "# DataFrame de variables no categóricas\n",
+    "df_no_categoricas = df[no_categoricas]\n",
+    "print('\\nVariables no categóricas:')\n",
+    "print(df_no_categoricas.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b8d22f6",
+   "metadata": {},
+   "source": [
+    "## Conclusiones \n",
+    "El dataset contiene información sobre 21 características de viviendas vendidas en una región, con un total de 21,613 registros. Las variables incluyen datos numéricos (como precio, habitaciones, baños, áreas, año de construcción) y categóricos (como vista al agua, calidad de la vista, condición, calificación de la construcción y código postal).\n",
+    "\n",
+    "Para el análisis, se realizó la siguiente manipulación de los datos:\n",
+    "\n",
+    "Se extrajeron el año y el mes de venta desde la columna date para facilitar análisis temporales.\n",
+    "Se creó la variable years_since_renovation para identificar el tiempo desde la última renovación o construcción.\n",
+    "Se separaron las variables en dos grupos: categóricas (por ejemplo, waterfront, view, condition, grade, zipcode, year_sold, month_sold) y no categóricas (por ejemplo, price, bedrooms, bathrooms, sqft_living, etc.).\n",
+    "Se revisaron los datos en busca de valores nulos y duplicados, confirmando la calidad del dataset.\n",
+    "Se realizó un resumen estadístico de las variables numéricas y un conteo de valores para las categóricas.\n",
+    "Esta manipulación permite entender la estructura del dataset y preparar los datos para el análisis exploratorio, el preprocesamiento y la modelización."
    ]
   }
  ],
