--- a/analitica.ipynb
+++ b/analitica.ipynb
@@ -1121,7 +1121,7 @@
    ],
    "source": [
     "# Tomar el primer elemento del DataFrame filtrado y mostrarlo transpuesto (columna: valor)\n",
-    "n_registro = df_filtrado.iloc[0\n",
+    "n_registro = df_filtrado.iloc[0]\n",
     "for columna, valor in n_registro.items():\n",
     "    print(f\"{columna}: {valor}\")"
    ]
