--- a/bonus.ipynb
+++ b/bonus.ipynb
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "97391dfc",
    "metadata": {},
    "outputs": [],
@@ -583,7 +583,7 @@
     "# from sklearn.metrics import accuracy_score, f1_score, confusion_matrix, classification_report\n",
     "# # \n",
     "# # Configuración\n",
-    "# API_KEY = \"31552d8a536a4dc7b37a84012b153eca\"  # Reemplaza por tu clave real\n",
+    "# API_KEY = \n",
     "# API_URL = \"https://api.aimlapi.com/v1/chat/completions\"\n",
     "# MODEL = \"deepseek/deepseek-reasoner-v3.1\"\n",
     "# BATCH_SIZE = 10  # Puedes ajustar el tamaño del batch\n",
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "9c1eb1de",
    "metadata": {},
    "outputs": [],
@@ -648,7 +648,7 @@
     "# from sklearn.metrics import accuracy_score, f1_score, confusion_matrix, classification_report\n",
     "\n",
     "# # Configuración\n",
-    "# API_KEY = \"31552d8a536a4dc7b37a84012b153eca\"  # Reemplaza por tu clave real\n",
+    "# API_KEY = \n",
     "# API_URL = \"https://api.aimlapi.com/v1/chat/completions\"\n",
     "# MODEL = \"x-ai/grok-4-fast-reasoning\"\n",
     "# BATCH_SZ  = 20                  # tamaño de lote externo (controla pausas)\n",
