--- a/bonus.ipynb
+++ b/bonus.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "3ad8e859",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
          "type": "string"
         }
        ],
-       "ref": "06221a2f-066c-45d8-9921-14de9c742c46",
+       "ref": "9e79ab79-a722-4820-9e44-4b46218a25f6",
        "rows": [
         [
          "0",
@@ -199,7 +199,7 @@
        "4   Jan 5, 2024 · 8:38 PM UTC  overwhelmed    scared  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "id": "f1fd8169",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "id": "e0e4baa9",
    "metadata": {},
    "outputs": [
@@ -244,29 +244,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                   text      emotion  \\\n",
-      "1179  Extraño esa figura en la casa que estaba atent...   responsive   \n",
-      "1204                ni modo, tocó independizarse rápido   responsive   \n",
-      "2576  A los de JxC, y \"Periodistas\" que estan defend...       daring   \n",
-      "422   Después de varios comentarios agrios y hate re...    irritated   \n",
-      "695   no me extraña que se hayan alejado amistades, ...      distant   \n",
-      "194   Hay varias pero, pq sigo sintiéndome infeliz, ...  embarrassed   \n",
-      "296   Gordo Dan me parece un tipo asquerosamente fac...      jealous   \n",
-      "1554  una pena lo de oklahoma, revivieron muy muy ta...     thankful   \n",
-      "1210  Que tiene como casi dos horas viéndose la espa...   responsive   \n",
-      "173   Me regalaron dos rosas bonitas 💕 fue muy bonit...  embarrassed   \n",
+      "                                                   text     emotion sentiment  \\\n",
+      "1461  esta llamando mi atención porque quiere que le...      loving  peaceful   \n",
+      "887                   indo no parque e levando a hq☝🏻☝🏻      stupid       sad   \n",
+      "1831  me siento r linda esto nunca pasa estaré por c...   confident  powerful   \n",
+      "2195  Erda que risa la vez que dije que había escuch...   surprised  powerful   \n",
+      "341   Me sorprende lo competitivo que puedo llegar h...     jealous       mad   \n",
+      "2111  Me pregunto dónde estará el chico que me grabó...   surprised  powerful   \n",
+      "571                                  me siento abrumado  frustrated       mad   \n",
+      "710                        Desconectado de todo, mejor.     distant       mad   \n",
+      "2193  Le quiero dar un abrazo a mi desesperación e i...   surprised  powerful   \n",
+      "1609  Bendecido por tener a mis padres un año más y ...    thankful  peaceful   \n",
       "\n",
-      "     sentiment sentiment_label  \n",
-      "1179  peaceful          NEUTRO  \n",
-      "1204  peaceful          NEUTRO  \n",
-      "2576    joyful        POSITIVO  \n",
-      "422        mad        NEGATIVO  \n",
-      "695        mad        NEGATIVO  \n",
-      "194     scared        NEGATIVO  \n",
-      "296        mad        NEGATIVO  \n",
-      "1554  peaceful        POSITIVO  \n",
-      "1210  peaceful          NEUTRO  \n",
-      "173     scared        NEGATIVO  \n",
+      "     sentiment_label  \n",
+      "1461        POSITIVO  \n",
+      "887         NEGATIVO  \n",
+      "1831        POSITIVO  \n",
+      "2195        POSITIVO  \n",
+      "341         NEGATIVO  \n",
+      "2111        POSITIVO  \n",
+      "571         NEGATIVO  \n",
+      "710         NEGATIVO  \n",
+      "2193        POSITIVO  \n",
+      "1609        POSITIVO  \n",
       "sentiment_label\n",
       "POSITIVO    1190\n",
       "NEGATIVO    1160\n",
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "id": "aadfb612",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "id": "573d1282",
    "metadata": {},
    "outputs": [],
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "97391dfc",
    "metadata": {},
    "outputs": [],
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9c1eb1de",
    "metadata": {},
    "outputs": [],
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "id": "b572652e",
    "metadata": {},
    "outputs": [
@@ -695,10 +695,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "id": "12d088f3",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/luisduquefranco/Documentos/Entrevistas/Analitica/Analitica/analitica/lib64/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -720,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "id": "379c1d90",
    "metadata": {},
    "outputs": [
@@ -806,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "id": "a8b21554",
    "metadata": {},
    "outputs": [
@@ -853,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "id": "da93b402",
    "metadata": {},
    "outputs": [
@@ -928,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "id": "8b93e9e5",
    "metadata": {},
    "outputs": [
